2008-07-19  Matthias Clasen  <mclasen@redhat.com>

	Merge from trunk:

	Bug 540616 – mem leak in filechooser button

	* gunixvolumemonitor.c (get_mount_for_mount_path): Free
	the mount entry. Reported by Chrisitan Persch

2008-07-01  Matthias Clasen  <mclasen@redhat.com>
	
	* === Released 2.16.4 ===

2008-06-30  Matthias Clasen  <mclasen@redhat.com>

	Backported from trunk:

	Bug 537392 – Additional colon in xattr name

	* glocalfileinfo.c (set_xattr): Skip the second colon of the prefix,
	too. Reported by  Alessandro Morandi

2008-06-30  Matthias Clasen  <mclasen@redhat.com>

	Backported from trunk:

	Bug 536641 – Filesystem querying in gio does not list AFS and autofs
	file systems

	* glocalfile.c (get_fs_type): Add afs and autofs.
	Patch by Danny Baumann.

2008-06-30  Matthias Clasen  <mclasen@redhat.com>

	Backported from trunk:

	Bug 528600 – g_dummy_file_get_parent("scheme://example.com/")

	* gdummyfile.c (g_dummy_file_get_parent): Return NULL if there
	is no parent.  (Owen Taylor, patch by Christian Neumair)

2008-06-30  Matthias Clasen  <mclasen@redhat.com>

	Backported from trunk:

	* gfile.c (g_file_replace_contents): do not leak the output stream.

2008-06-30  Matthias Clasen  <mclasen@redhat.com>

	Backported from trunk:

	Bug 530196 – _g_local_file_has_trash_dir() doesn't handle st_dev == 0

	* glocalfile.c (_g_local_file_has_trash_dir): Handle the case that
	st_dev might be zero.

2008-06-29  Matthias Clasen  <mclasen@redhat.com>

	Bug 540423 – unrecoverable error after g_seekable_truncate(seekable,
	0, ...)

	* gmemoryoutputstream.c (array_resize): Handle truncation to
	zero correctly. Reported by Akira Tagoh

2008-06-29  Matthias Clasen  <mclasen@redhat.com>

	Bug 540459 – there are no way of getting the real number of bytes
	written in GMemoryOutputStream

	* gmemoryoutputstream.c: Fix docs for how to get the data size.
	Pointed out by Akira Tagoh

2008-05-13  Bastien Nocera  <hadess@hadess.net>
